syntax = "proto2";

package Advantage.protos;

import "protos/agents/deep_q_agent.proto";

message Agents {
    oneof agent {
        DeepQAgent deepQAgent = 1;
    }
}
